[BUG #8028] Fixed the 'fadeIn' animation for IE9 browsers by setting the end value of 'opacity' to 0.99 instead of 1. This prevents this browser from 'optimizing' it by not setting the inline style at all. This wrong 'optimization' breaks the fadeIn animation whenever a opacity value is set on the element with CSS.

--- a/component/standalone/website/test/style2.css
+++ b/component/standalone/website/test/style2.css
@@ -1,3 +1,7 @@
 #affe {
   border: 1px solid red;
 }
+
+#invisible {
+  opacity : 0;
+}
